; vim: set ft=lisp:
(env
(dev (flags (-w +a-4-29-40-41-42-44-45-48-58-59-60-40))))

(executable
  (name watch)
  (libraries inotify inotify.lwt lwt.unix)
  (modules watch)
  (preprocess (pps lwt_ppx)))

(executable
  (name tdl)
  (libraries ANSITerminal cmdliner cohttp cohttp-lwt-unix file_probe)
  (modules tdl)
;  (preprocess (pps lwt_ppx))
  )

(executable
  (name losty)
;  (preprocess (pps ppx_let))
  (libraries lambdasoup caqti-lwt inifiles unix cohttp cohttp-lwt-unix)
  (modules losty request))

(library
  (name file_probe)
  (modules tlist)
  (libraries bencode unix)
  (wrapped false)
  (foreign_stubs (language c) (names file-probe)))
